Add convoluted but somewhat functional features to at least read in and parse Obsidian Markdown filepaths

--- a/edit_obsidian_notes.ipynb
+++ b/edit_obsidian_notes.ipynb
@@ -1,13 +1,142 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import glob\n",
     "import re\n",
-    "import os"
+    "import os\n",
+    "import pathlib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.chdir('/home/lilyroses/Obsidian-Notes/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Bash Shortcuts.md', 'new.md', 'Test.md', 'Bandit.md']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get a list of the Obsidian-Vault contents, and split\n",
+    "# the pathnames by directories and filename (excluding\n",
+    "# the root directory).\n",
+    "\n",
+    "# Don't consider anything within the '.obsidian' folder\n",
+    "ignore = '.obsidian'\n",
+    "\n",
+    "obsidian_vault = pathlib.Path('/home/lilyroses/Obsidian-Notes/')\n",
+    "\n",
+    "# Create variable for iterable\n",
+    "abs_filepaths = [abs_filepath for abs_filepath in obsidian_vault.rglob(\"*.md\")]\n",
+    "\n",
+    "root_dir = '/home/lilyroses/Obsidian-Notes/'\n",
+    "# Hold abs paths of each item in Obsidian-Notes (excepting .obsidian folder,\n",
+    "# as we ignored it earlier)\n",
+    "\n",
+    "relative_filepaths = []\n",
+    "\n",
+    "for abs_filepath in abs_filepaths:\n",
+    "    # Change to str, or item with be a Path object\n",
+    "    abs_filepath = str(abs_filepath)\n",
+    "    # Get rid of the root directories of the files\n",
+    "    relative_filepath = abs_filepath.replace(root_dir, '')\n",
+    "    relative_filepaths.append(relative_filepath)\n",
+    "\n",
+    "split_paths = []\n",
+    "filenames = []\n",
+    "# For each filename, separate the folders from the\n",
+    "for relative_filepath in relative_filepaths:\n",
+    "    split_path = []\n",
+    "    if '/' in relative_filepath:\n",
+    "        i = relative_filepath.rfind('/') + 1\n",
+    "        dirs = relative_filepath[:i]\n",
+    "        # filename = relative_filepath[i:-3]\n",
+    "        filename = relative_filepath[i:]\n",
+    "        filenames.append(filename)\n",
+    "        split_path.append(dirs)\n",
+    "        split_path.append(filename)\n",
+    "        # print(split_path)\n",
+    "    else:\n",
+    "        split_path.append(relative_filepath)\n",
+    "        filenames.append(relative_filepath)\n",
+    "        # print(split_path)\n",
+    "    split_paths.append(split_path)\n",
+    "\n",
+    "\n",
+    "# print(split_paths)\n",
+    "# print(abs_filepaths)\n",
+    "print(filenames)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/lilyroses/Obsidian-Notes/Bash Shortcuts.md\n",
+      "/home/lilyroses/Obsidian-Notes/new.md\n",
+      "/home/lilyroses/Obsidian-Notes/Example Dir/Test.md\n",
+      "/home/lilyroses/Obsidian-Notes/Over the Wire/Bandit.md\n"
+     ]
+    }
+   ],
+   "source": [
+    "filename_tags = []\n",
+    "\n",
+    "for paths in split_paths:\n",
+    "    filename = paths[-1]\n",
+    "    filename_tag = filename[:-3]\n",
+    "    filename_tags.append(filename_tag.lower())\n",
+    "# print(filename_tags)\n",
+    "    \n",
+    "\n",
+    "copy_files = []\n",
+    "for abs_filepath in abs_filepaths:\n",
+    "    print(abs_filepath)\n",
+    "        # copy_file = f'{abs_filepath}_copy.txt'\n",
+    "\n",
+    "        # with open(abs_filepath, 'r') as f_og, open(copy_file, 'w') as f_cp:\n",
+    "\n",
+    "            # f_cp.write(f_og.read())\n",
+    "\n",
+    "\n",
+    "        # print(text)\n",
+    "            # for filename in filenames:\n",
+    "                # if filename.lower() in text:\n",
+    "                    # text = text.replace(word, f'[[]]')\n",
+    "\n",
+    "            # lines = [line.strip() for line in f.readlines()]\n",
+    "            # words = text.split(' ')\n",
+    "            # for word in words:\n",
+    "            #     print(word)\n",
+    "        "
    ]
   },
   {
@@ -15,23 +144,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "filenames = os.listdir()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for filename in filenames:\n",
-    "    print(filename)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,14 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
